--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2
     align-items: center;
     margin: 20px;
     padding: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid aliceblue;
     border-radius: 5px;
     background-color: transparent;
     position: relative;
