--- a/style.css
+++ b/style.css
@@ -18,13 +18,27 @@ main
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 
 h2
 {
     font-size: 2em;
-    text-align: center;
+    text-align: left;
+    margin: 20px;
+    padding: none;
+    color: aliceblue;
+    letter-spacing: 0.1em;
+    width: 100%;
+}
+
+p
+{
+    font-size: .9em;
+    text-align: left;
+    margin: 20px;
+    padding: none;
     color: aliceblue;
     letter-spacing: 0.1em;
     width: 100%;
@@ -44,8 +58,8 @@ h2
     border-color: aliceblue;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    height: 550px;
-    width: 450px;
+    height: 500px;
+    width: 350px;
 }
 
 .entry-box
@@ -120,8 +134,32 @@ h2
     color: aliceblue;
 }
 
-  
-  
-  
-  
-  
+.forget-button
+{
+    display: flex;
+    align-items: center;
+    margin: 20px;
+    padding: none;
+    position: relative;
+}
+
+.forget
+{
+    background-color: transparent;
+    color: aliceblue;
+    padding: 10px 10px;
+    border: none;
+    border-radius: 20px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.forget:hover
+{
+    background-color: #005983; /*Fix color later*/
+}
+
+
