--- a/style.css
+++ b/style.css
@@ -159,7 +159,23 @@ p
 
 .forget:hover
 {
-    background-color: #005983; /*Fix color later*/
+    background-color: #3e69ad; 
 }
 
+.sign-in-button
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
 
+.sign-in
+{
+    background-color: #3e69ad;
+    color: aliceblue;
+    border: none;
+    padding: 15px 130px;
+    border-radius: 20px;
+}
