--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --text-seconday: aliceblue;
     --bg-primary: #23232e;
     --bg-secondary: #141418;
+    --transition-speed: 500ms
 }
 
 html
@@ -65,7 +66,88 @@ body::-webkit-scrollbar-thumb
     height: 100vh;
     position: fixed;
     background-color: var(--bg-primary);
+    transition: width 500ms ease;
 }
+
+.logo svg
+{
+    transform: rotate(0deg);
+    transition: var(--transition-speed);
+}
+
+.navbar:hover .logo svg
+{
+    transform: rotate(-360deg);
+}
+
+.navbar-nav
+{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav-item
+{
+    width: 100%;
+}
+
+.nav-link
+{
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    color: var(--text-primary);
+    text-decoration: none;
+    filter: grayscale(100%) opacity(0.7);
+    transition: var(--transition-speed);
+}
+
+.nav-link:hover
+{
+    filter: grayscale(0%) opacity(1);
+    background: var(--bg-secondary);
+    color: var(--text-seconday);
+}
+
+.link-text
+{
+    display: none;
+    margin-left: 1rem;
+}
+
+.nav-link svg
+{
+    min-width: 2rem;
+    margin: 0 1.5rem;
+}
+
+.navbar:hover
+{
+    width: 15rem;
+}
+
+.navbar:hover .link-text
+{
+    display: block;
+}
+
+.logo
+{
+    font-weight: bold;
+    width: 100%;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: var(--bg-secondary);
+    background: var(--bg-primary);
+    letter-spacing: 0.3ch;
+}
+
+
 
 h2
 {
