--- a/style.css
+++ b/style.css
@@ -4,11 +4,6 @@
 {
     font-size: 16px;
     font-family: "Gothic A1", "Century Gothic";
-    --text-primary: #b6b6b6;
-    --text-seconday: aliceblue;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-    --transition-speed: 500ms
 }
 
 html
@@ -30,7 +25,7 @@ body
 main
 {
 
-    background: url(assets/background.jpg);
+    background: url(assets/background1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
@@ -198,7 +193,7 @@ p
 
 .forget:hover
 {
-    background: rgba(62, 105, 173, .6);
+    background: rgba(0, 114, 177, .5);
 }
 
 .sign-in-button
@@ -212,7 +207,7 @@ p
 
 .sign-in
 {
-    background-color: #3e69ad;
+    background-color: #0072b1;
     color: aliceblue;
     border: none;
     padding: 15px 130px;
@@ -248,7 +243,7 @@ p
 
 .sign-up:hover
 {
-    background: rgba(62, 105, 173, .6);
+    background: rgba(0, 114, 177, .5);
 }
 
 .other-login-separator
@@ -282,3 +277,19 @@ p
     margin-left: 0.8em;
 }
 
+.alt-sign-in
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    border-radius: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.alt-sign-in svg
+{
+    fill: aliceblue;
+    background-color: transparent;
+}
