--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ p
     color: aliceblue;
     letter-spacing: 0.1em;
     margin: 20px;
-    padding: 0;
+    padding-top: 5px;
 }
 
 .other-login-separator::before,
