--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body
 main
 {
 
-    background: url(assets/background.jpg);
+    background: url(assets/background1.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
